static/css/restyle/restyle.less
@import (less) '../common/fonts';
// Needed for hovercards
@import (less) '../impala/hovercards';

// Colors
@primary-blue: rgba(12, 153, 213, 1);
@primary-link: #6ac3e2;
@primary-font: 'Open Sans', X-LocaleSpecific, sans-serif;
@link-on-white-bg: #0996F8;
@link-on-color-bg: #fff;
@header-font-color: #c63717;
@default-font-color: #333;

// Common styles
@detail-border: 1px solid #ebebeb;

// Sizes
@containerWidth: 1018px;
@pageWidth: 960px;

h1,
h2,
h3,
h4,
h5 {
  line-height: 1.5;
  font-family: @primary-font !important;
  font-style: normal !important;
  font-weight: normal;
}

* {
  font-family: @primary-font !important;
}

// Styles
html {
  font-size: 13px;
}

body.restyle {
  background: #fff none repeat scroll 0 0;
  color: @default-font-color;
  font-family: @primary-font;
  font-style: normal;
  line-height: 1.5;
  min-width: @containerWidth;
  overflow-x: hidden;
}

h1,
#masthead h1 {
  font-family: @primary-font;
}
#masthead h1 a {
  color: @link-on-color-bg;
}

h2 {
  margin-top: 1em;
}

.primary h1,
.island h2 {
  margin-top: 0;
}

h1,
.primary h2,
hgroup h2.addon,
hgroup h2.collection,
.developer-hub header h2,
.developer-hub #homepage h2,
.personas-featured h3 {
  color: @default-font-color;
  font-size: 1.692rem;
  font-style: normal;
}

masthead.submit-theme,
#collections-landing {
  margin-top: 20px;
}

#theme-preview-details {
  display: block;
  width: 640px;
  height: 92px;
}

.addon-description-header,
.addon-details .secondary.addon-vitals {
  background: none;
}

#addon .install-wrapper .warning {
  color: @link-on-color-bg;
}

.addon-details h2 {
  color: inherit;
  font-size: 1.75rem;
}

.primary header h2,
.personas-featured h3 {
  margin: 0 0 15px;
}

// These are all defined in AMO's original CSS and seem to need overriding :'(
a,
a:link,
a:visited,
a:hover,
a:focus,
a:active,
.more-info,
.more-info:link,
.more-info:visited,
.more-info:hover,
.more-info:focus,
.more-info:active {
  color: @link-on-white-bg;
}

a.button,
a.delete-button,
a.delete-button:hover,
button.link:hover span,
button.link:focus span,
button.link:active span {
  color: @link-on-color-bg;
}

.amo-header,
.primary:not(.more-island),
.secondary {
  &::after {
    clear: both;
    content: "";
    display: block;
    height: 0;
    width: 100%;
  }
}

.primary,
.secondary {
  background: #fff;
}

.header-bg {
  background-color: #0c99d5;
  /*
    Main Content Wrapper Background - General
    blue-pattern, blue-gradient, white overlay
    (sharp-cut at 130px)
  */
  background-image:
    linear-gradient(
      to bottom,
      transparent 0,
      transparent 100px
    ),
    linear-gradient(
      to bottom,
      rgba(12, 153, 213, 0) 0,
      @primary-blue 500px,
      #fff 0%
    ),
    repeating-linear-gradient(
      118deg,
      rgba(12, 153, 213, 0) 0,
      #00a7e0 550px,
      rgba(12, 153, 213, 0) 550px,
      #00a7e0 800px,
      rgba(12, 153,213, 0) 800px,
      #00a7e0 950px
    );
  background-position:
    0 416px,
    0 0,
    0 0;
  // This breaks the background panel wrapper out of the containing box,
  // allowing it to be full-width. This means the background gradient can
  // span the entire width of the viewport, even though the parent has a
  // max-width.
  margin: 0 0 12px ~"calc(-1 * ((100vw - 100%) / 2))";
  min-width: @containerWidth;
  width: 100vw;

  .html-rtl & {
    margin: 0 ~"calc(-1 * ((100vw - 100%) / 2))" 12px 0;
  }
}

/*
  Main Content Wrapper Background - Home and Add-on Details page
  blue-pattern, blue-gradient, white overlay
  (sharp-cut at 416px)
*/
.home .header-bg,
.addon-details .header-bg {
  background-image:
    linear-gradient(
      to bottom,
      transparent 0,
      transparent 100px
    ),
    linear-gradient(
      to bottom,
      rgba(12, 153, 213, 0) 0,
      @primary-blue 500px,
      @primary-blue 0%
    ),
    repeating-linear-gradient(
      118deg,
      rgba(12, 153, 213, 0) 0,
      #00a7e0 550px,
      rgba(12, 153, 213, 0) 550px,
      #00a7e0 800px,
      rgba(12, 153, 213, 0) 800px,
      #00a7e0 950px
    );
  background-position:
    0 416px,
    0 0,
    0 0;
}

.amo-header {
  margin-bottom: 0;
}

.amo-header-wrapper {
  margin: 0 auto;
  max-width: @pageWidth;
}

.category-landing [role="main"],
.amo-header + .primary {
  width: 78%;
}

.category-landing .amo-header + .primary header {
  display: none;
}

// hide overflow to cover streching of bg in
// .addon-details .primary:first-of-type:before
.addon-details #background-wrapper {
  overflow: hidden;
}

.amo-header {
  font-family: inherit;
}

body:not(.home) .amo-header,
.addon-details .header-bg,
.home .header-bg {
  min-height: 130px;
}

.addon-details .header-bg {
  margin-bottom: 0;
}

#site-nav ul {
  margin-bottom: 0;
}

.menu-nav {
  color: @link-on-color-bg;
}

.amo-header ul a {
  color: @link-on-color-bg;
  font-family: inherit;

  ul a {
    color: #fff;
  }
}

#masthead h1 {
  font-size: 4.308rem; // 56px
  line-height: 3.692rem; // 48px
  letter-spacing: -1px;
  text-transform: none;
}

.site-title {
  margin-bottom: 0;
  padding-bottom: 7px;

  a {
    color: @link-on-color-bg;
    text-decoration: none;

    &:focus,
    &:hover {
      color: @link-on-color-bg;
      text-shadow: none;
    }

    img {
      width: 70px;
    }
  }
}

// DevHub Title
.site-title.prominent {
  // These are tied up in some really nested class + id selectors, so we
  // cave and use !important
  margin-bottom: 20px !important;
  margin-top: -20px !important;

  a {
    color: @link-on-color-bg;
    outline: none;

    &:before {
      background-image: none;
    }

    small {
      margin-left: 5px;
      margin-bottom: -7px;
      line-height: normal;
    }
  }
}
/* ... */

